@@ -1,4 +1,4 @@
-use Test::More tests => 6;
+use Test::More tests => 25;
 use File::Spec;
 use lib File::Spec->catfile("..","lib");
 use Math::ODE;
@@ -6,92 +6,125 @@ use Data::Dumper;
 use strict;
 use warnings;
 
-my ($o, $error, @vals, $res);
+my ($o, $ok, $sol, $error, @vals, $res);
+my @steps = qw(0.1 0.09 0.08 0.05 0.01 0.005);
 
+######################################
+# y'   = - y 
+# y(0) = 2
+######################################
 # analytic solution is y(x) = 2 e^{-x}
-$o = new Math::ODE ( file => 'data',
-			step => 0.1,
-			initial => [2], 
-			ODE => [ \&DE1 ], 
-			t0 => 0,
-			tf => 5 );
-$o->evolve;
-$error = $o->error;	
-@vals =  $o->values_at(3);
-$res = abs( $vals[0]  - 2*exp(-3) );
-ok( $res < $error, "Constant Coefficient 1st order solved correctly, res=$res, expected error=$error"); 
+######################################
+for my $step (@steps) {
+    $o = new Math::ODE ( 
+            step => $step,
+            initial => [2], 
+            ODE => [ \&DE1 ], 
+            t0 => 0,
+            tf => 5 );
+    if( $o->evolve ){
+        $sol = sub { my $t=shift; 2 * exp(-$t) };
+        $ok = $o->verify_solution($sol);
+        ok( $ok , "y'=y, y(0)=2, y(x) = 2 e^{-x}\nstep=$step, max error=$ok, expected error=" .$o->error); 
+    } else {
+        ok( 0 );
+    }
+}
 
-
+######################################
+# y' = y^2
+# y(0) = 1 
+######################################
 # analytic solution is y(x) = -1/(x-1)
-$o = new Math::ODE ( file => 'data',
-			step => 0.01, 
+######################################
+for my $step (@steps) {
+    $o = new Math::ODE ( 
+			step => $step, 
 			initial => [1], 
 			ODE => [ \&DE2 ], 
 			t0 => 0,
 			tf => 0.5 );
-$o->evolve;
-$error = $o->error;	
-@vals =  $o->values_at(0.4);
-$res = abs( $vals[0]  + 1/(0.4-1) );
-ok( $res < $error, "Nonlinear 1st order : res=$res, expected error=$error"); 
+    $o->evolve;
 
+    $sol = sub { my $t=shift; -1/($t-1) };
+    $ok = $o->verify_solution($sol);
 
-SKIP : {
-	skip 'this keeps me up at night, where is the added numerical error coming from?', 1;
+    ok( $ok,  "y'=y^2, y(0)=1, y(x)=-1(x-1)\n step=$step, max error=$ok, expected error=" . $o->error); 
+}
+
+######################################
+# y' = - 2 x exp(-x^2)
+# y(0) = 1
+######################################
 # analytic solution is y(x) = exp(-x^2)
-$o = new Math::ODE ( file => 'data',
-			step => 0.1, 
+######################################
+sub DEgauss { my ($t,$y) = @_; - 2 * $t * exp ( - $t ** 2 ); }
+for my $step (@steps) {
+    $o = new Math::ODE ( 
+			step => $step,
 			initial => [1], 
-			ODE => [ \&DE3 ], 
+			ODE => [ \&DEgauss ], 
 			t0 => 0,
 			tf => 5 );
-$o->evolve;
-$error = $o->error;	
-@vals =  $o->values_at(3);
-$res = abs( $vals[0]  + 2*3*exp(-3**2) );
-ok( $res < $error, " 1st order nonhomogeneous: res=$res, expected error=$error"); 
+    $o->evolve;
+
+    $sol = sub { my $t=shift;  exp(-$t**2) };
+
+    $ok = $o->verify_solution($sol);
+
+    ok( $ok , "y'=-2 x exp(-x^2), y(0) = 1, y(x) = exp(-x^2)\n step=$step, max error=$ok, expected error=" . $o->error); 
 }
+##############
+##############
+
 sub DE1 { my ($t,$y) = @_; -$y->[0]; }
 sub DE2 { my ($t,$y) = @_; $y->[0] ** 2; }
-sub DE3 { my ($t,$y) = @_; - 2 * $y->[0] * exp ( - $y->[0] ** 2 ); }
 
+SKIP: {
+
+skip "stuff", 1;
+
+sub DE3 { my ($t,$y) = @_; $y->[0] ** 3; }
 sub DE4 { my ($t,$y) = @_; $y->[0] ** 4; }
 sub DE5 { my ($t,$y) = @_; $y->[0] ** 5; }
+sub DE6 { my ($t,$y) = @_; $y->[0] ** 6; }
 
-SKIP : {
-	skip 'need to implement framework to test a family of similar odes with autogenerated coderefs', 2;
- 
-my $x = 0.25;
-for my $n ( 4 .. 5 ){
-	my $subs = [ 0,0,0,0, [ \&DE4 ] , [ \&DE5 ] ];
-	$o = new Math::ODE (    step => 0.1, 
-				initial => [1], 
-				ODE => $subs->[$n],
-				t0 => 0,
-				tf => 0.5 );
-	$o->evolve;
-	$error = $o->error;	
-	@vals =  $o->values_at($x);
-	$res = abs( $vals[0] - (1-$n)*($x+1/(1-$n)) ** (1/($n-1))  );
-	ok( $res < $error, "$n-th order nonlinear: res=$res, expected error=$error"); 
+for my $step (@steps) {
+        for my $n ( 3 .. 4 ){
+            my $subname = "DE$n";
+            $o = new Math::ODE (    
+                        step => $step, 
+                        initial => [1], 
+                        ODE => [\&$subname],
+                        t0 => 0,
+                        tf => 0.5 );
+            $o->evolve;
+            my $sol = sub { my $x = shift; (1-$n)*($x+1/(1-$n)) ** (1/($n-1)) };
+            $ok = $o->verify_solution($sol);
+            ok( $ok , "$n-th order nonlinear: step=$step, max error=$ok, expected error=" . $o->error); 
+
+        }
+}
 
 }
-}
-sub DElog { my ($t,$y) = @_; return 1/$t; }
 # y' = x^-1, y(1) = 1 
 #  Solution: y = ln(x)
-$o = new Math::ODE (    step => 0.1,
-                        initial => [0], 
-                        ODE => [ \&DElog ], 
-                        t0 => 1,
-                        tf => 10 );
-if ( $o->evolve ) {
-	my $x = 5;
-	$error = $o->error;	
-	@vals =  $o->values_at($x);
-	$res = abs( $vals[0] - log $x );
-	ok( $res < $error, "1-th order non-autonomous: res=$res, expected error=$error"); 
-} else {
-	ok( 0, 'numerical badness');
+
+sub DElog { my ($t,$y) = @_; return 1/$t; }
+for my $step (@steps) {
+    $o = new Math::ODE (
+            step => $step,
+            initial => [0], 
+            ODE => [ \&DElog ], 
+            t0 => 1,
+            tf => 10 );
+    if ( $o->evolve ) {
+        $sol = sub { log(shift) };
+        $ok = $o->verify_solution($sol);
+	    ok( $ok , "y'=1/x, y(1)=1, y(x)=log(x)\n step=$step, max error=$ok, expected error=" .$o->error); 
+    } else {
+	    ok( 0, 'numerical badness');
+    }
+
 }
 
